--- a/backend/templates/blog/teaser_banner.html
+++ b/backend/templates/blog/teaser_banner.html
@@ -1,5 +1,7 @@
+{% load static %}
 
-
-<div>
-    <h3>Nie czekaj, <a href="/signup/?role=P">już teraz dołącz jako piłkarz </a> </h3>
+<div class="text-center">
+    <img class="img-responsive" width="300px" src="{% static "assets/img/8208.png" %}">
+    <br><br>
+    <h3 style="font-size:1rem;"><a class="btn btn-danger" href="/signup/?role=P">Dołącz - darmowa rejestrajca</a> </h3>
 </div>
