--- a/marketplace/templates/marketplace/filters/filters_player_for_club.html
+++ b/marketplace/templates/marketplace/filters/filters_player_for_club.html
@@ -3,7 +3,7 @@
         {% include 'marketplace/filters/filter_position.html' with size=size options=filters.position %}
     </div>
     <div class="filter pr-2">
-        {% include 'marketplace/filters/filter_target_league.html' with size=size options=filters.league %}
+        {% include 'marketplace/filters/filter_target_league.html' with size=size options=filters.league title='cel poszukiwań' %}
     </div>
     <div class="filter pr-2">
         {% include 'marketplace/filters/filter_year_from.html' with size=size %}
