--- a/marketplace/templates/marketplace/announcement_club_for_player.html
+++ b/marketplace/templates/marketplace/announcement_club_for_player.html
@@ -7,8 +7,7 @@
 <!--    </div>-->
         <div class="serv-section-desc">
             <h4>
-<!--                <a href="{{ object.club.get_permalink }}">{{ object.club.name }}</a>-->
-                <a href="{{ object.club.get_permalink }}">Klub szuka zawodnika! temp</a>
+                <a href="{{ object.club.get_permalink }}">{{ object.club.name }}</a>
 
                 <span class="badge badge-success" style="float: right">Klub szuka zawodnika</span>
             </h4>
