--- a/marketplace/templates/marketplace/announcement_club_for_player.html
+++ b/marketplace/templates/marketplace/announcement_club_for_player.html
@@ -19,23 +19,23 @@
         <div class="col-12 card-text text-muted"> 
             <small class="row no-gutters">
                 <div class="col-6 col-md-3 text-center">
-                    <h4 class="ann-icon icofont-match-review"></h4>
-                    {% for position in  object.positions.all %} 
-                        {{ position }}<br>
+                    {% for position in  object.positions.all %}
+                    <h5>{{ position }}</h5>
                     {% endfor %}
+                    Pozycja
                 </div>
                 <div class="col-6 col-md-3 text-center">
-                    <h4 class="icofont-ui-calendar"></h4>
-                    {{ object.year_from }} - {{ object.year_to }}
+                    <h5>{{ object.year_from }} - {{ object.year_to }}</h5>
+                    Roczniki
                 </div>
                 <div class="col-6 col-md-3 text-center">
-                    <h4 class="icofont-users-alt-5"></h4>
-                    {{ object.gender }}, {{ object.seniority }}
+                    <h5>{{ object.gender }}, {{ object.seniority }}</h5>
+                    Płeć i starszeństwo
                 </div>
 
                 <div class="col-6 col-md-3 text-center">
-                    <h4 class="icofont-map-pins"></h4> 
-                    {{ object.address }}
+                    <h5>{{ object.address|default:'-' }}</h5>
+                    Region
                 </div>
                 <div class="card-text col-md-12">
                     <small> {{ object.body }} </small>
