--- a/marketplace/templates/marketplace/_filters.html
+++ b/marketplace/templates/marketplace/_filters.html
@@ -9,15 +9,15 @@
         {% include 'marketplace/filters/filter_voivodeship.html' with size=150 options=filters.voivodeship %}
     </div>
 
+    <div class="filter pr-2">
     {% if view_type == "coach_for_club" %}
-    <div class="filter pr-2">
         {% include 'marketplace/filters/filter_leagues.html' with size=160 options=filters.league title='aktualny poziom' %}
-    </div>
+    {% elif view_type == "club_for_coach" %}
+        {% include 'marketplace/filters/filter_leagues.html' with size=size options=filters.league title='poziom' %}
     {% else %}
-    <div class="filter pr-2">
         {% include 'marketplace/filters/filter_leagues.html' with size=size options=filters.league title='rozgrywki' %}
-    </div>
     {% endif %}
+    </div>
 
     {% if view_type == "player_for_club" %}
         {% include 'marketplace/filters/filters_player_for_club.html' with size=size %}
