--- a/marketplace/templates/marketplace/announcement_club_for_coach.html
+++ b/marketplace/templates/marketplace/announcement_club_for_coach.html
@@ -20,7 +20,7 @@
             <small class="row no-gutters">
                 <div class="col-6 col-md-3 text-center">
                     <h5>{{ object.lic_type }}</h5>
-                        Licencja
+                    Licencja
                 </div>
                 <div class="col-6 col-md-3 text-center">
                     <h5>{{ object.league }}</h5>
@@ -28,7 +28,7 @@
                 </div>
                 <div class="col-6 col-md-3 text-center">
                     <h5>{{ object.gender }}, {{ object.seniority }}</h5>
-                    Płeć i starszeństwo
+                    Rozgrywki
                 </div>
 
                 <div class="col-6 col-md-3 text-center">
@@ -57,7 +57,7 @@
             
             <div class="card-text">
                 <i class="icofont-wall-clock"></i>
-                <small class="text-muted"> {{ object.created_at|days_since }}</small>
+                <small class="text-muted"> {{ object.expire|days_until }}</small>
             </div>
             
             <div class="card-text pull-right">
