--- a/marketplace/templates/marketplace/announcement_club_for_player.html
+++ b/marketplace/templates/marketplace/announcement_club_for_player.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="col-6 col-md-3 text-center">
                     <h5>{{ object.gender }}, {{ object.seniority }}</h5>
-                    Płeć i starszeństwo
+                    Rozgrywki
                 </div>
 
                 <div class="col-6 col-md-3 text-center">
@@ -59,7 +59,7 @@
             
             <div class="card-text">
                 <i class="icofont-wall-clock"></i>
-                <small class="text-muted"> {{ object.created_at|days_since }}</small>
+                <small class="text-muted"> {{ object.expire|days_until }}</small>
             </div>
             
             <div class="card-text pull-right">
