poprawki do marketplace

--- a/marketplace/templates/marketplace/announcement_player_for_club.html
+++ b/marketplace/templates/marketplace/announcement_player_for_club.html
@@ -39,9 +39,8 @@
                     Pozycja
                 </div>
                 <div class="col-6 col-md-3 text-center">
-                    <h5>{{ player.profile.display_league|default:'-' }}</h5>
-<!--                    <h5> {{ object.looking_for }} </h5>-->
-                    Poziom
+                    <h5>{{ object.league|default:'-' }}</h5>
+                    Aktualny poziom
                 </div>
                 <div class="col-6 col-md-3 text-center">
 <!--                    <h5>{{ player.profile.soccer_goal|default:'-' }}</h5>-->
