--- a/clubs/templates/clubs/teams/card.html
+++ b/clubs/templates/clubs/teams/card.html
@@ -24,8 +24,10 @@
           {% include template with key=_('Klub')             value=object.display_club  link=object.club.get_permalink %}
         {% endif %}
 
-        {% include template with key=_('Poziom Rozgrywkowy') value=object.display_league|default:'-'                          %}
-        
+        {% include template with key=_('Rozgrywki') value=object.display_league|default:'-'           link=object.get_league_permalink     %}
+        {% include template with key=_('Poziom') value=object.display_league_seniority_name|default:'-'                          %}
+        {% include template with key=_('Grupa') value=object.display_league_group_name|default:'-'                          %}
+
         {% if see_club %}
         {% include template with key=_('Województwo')        value=object.display_voivodeship|default:'-'      %}
         {% endif %}
