--- a/soccerbase/templates/soccerbase/tables/table_players_card.html
+++ b/soccerbase/templates/soccerbase/tables/table_players_card.html
@@ -49,14 +49,12 @@
                {{ object.profile.display_team|default:''|upper  }} 
             </div>
             <div class=""> 
-                {{ object.profile.display_league|default:'-'|title }}, {{ object.profile.display_voivodeship|default:''|lower|truncatechars:25 }}
+                {{ object.profile.display_league_name|default:'-'|title }}, {{ object.profile.display_voivodeship|default:''|lower|truncatechars:25 }}
             </div>
         </div>   
                                                     <div class="sc-cell d-none d-md-flex col-md-3">
                                                         <a href="{{ object.profile.get_permalink }}">
-                                                        
                                                             <img class="avatar rounded img-responsive"  src="{% thumbnail object.picture|default:'default_profile.png' 'tables_avatar_show_medium' %}">
-
                                                             <img class="flag pl-3" src="{{ object.profile.country.flag }}" alt="flag">
                                                             <strong>
                                                             {{ object.get_full_name|upper}}
@@ -66,18 +64,13 @@
                                                         </a>
                                                     
                                                     </div>
-
-
                                                         <div class="sc-cell d-none d-md-flex col-5 col-md-1 text-left">
                                                             {{ object.profile.get_position_raw_display|default:''|title }}
                                                         </div >
                                                         
                                                         <div class="sc-cell d-none d-md-flex col-6 col-md-1 text-left">
-                                                            {{ object.profile.display_league|default:''|title  }}
+                                                            {{ object.profile.display_league_name|default:''|title  }}
                                                         </div >
-
-                                                    
-
                                                         <div class="sc-cell d-none d-md-flex col-5 col-md-2  text-left">
                                                             {{ object.profile.display_voivodeship|default:''|lower|truncatechars:25 }}
                                                         </div>
@@ -86,7 +79,6 @@
                                                             {{ object.profile.display_team|default:''|upper  }}
                                                         </div>
 
-
                                                         <div class="sc-cell d-none d-md-flex col-1 text-center">
                                                             <span>
                                                                 <span class="main-color">{{ object.profile.playermetrics.season_summary.team_goals|default:'0' }}</span> / 
@@ -94,24 +86,6 @@
                                                                 <span class="main-color">{{ object.profile.playermetrics.season_summary.minutes_played |default:'0' }}</span> 
                                                             </span>
                                                         </div>
-
-
-        {% comment %} <div class="d-none d-md-inline  col-4 col-md-1 stats  text-center">  
-            <span class="main-color">{{ object.profile.playermetrics.season_summary.team_goals|default:'0' }}</span> <span class="d-md-none"> gole </span>
-        </div> {% endcomment %}
-
-        {% comment %} <div class="d-none d-md-inline  col-3 col-md-1 stats"> 
-            <span class="main-color stats">{{ object.profile.playermetrics.season_summary.first_squad_games_played|default:'0' }}</span>  w pierwszym składzie 
-        </div> {% endcomment %}
-
-        {% comment %} <div class="d-none d-md-inline  col-4 col-md-1 stats text-center">
-            <span class="main-color">{{ object.profile.playermetrics.season_summary.games_played|default:'0' }}</span>  <span class="d-md-none">mecze  </span>   
-        </div> {% endcomment %}
-
-        {% comment %} <div class="d-none d-md-inline  col-4 col-md-1 stats text-center">
-            <span class="main-color">{{ object.profile.playermetrics.season_summary.minutes_played |default:'0' }}</span> <span class="d-md-none"> minuty</span>
-        </div> {% endcomment %}
-
         <div class="sc-cell d-none d-md-flex col-md-2">
             <span class="float-right"> 
                 {% profile_link object checks=False text="profil" %}
