--- a/plays/templates/plays/partials/_sidemenu_mobile.html
+++ b/plays/templates/plays/partials/_sidemenu_mobile.html
@@ -54,24 +54,26 @@
 <div id="mySidenav" class="sidenav d-flex flex-column"><br><Br>
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="icofont-close-circled main-color"></i></a>
     <span>
-   
       <div id="accordion1">
         {% for league in league_filters %}
             {% if not league.isparent and not league.childs.all %}
-                <a href="{{ league|get_league_url:current_season }}"><div class="plays-link {% if current_league_id == league.id %} link-active {% endif %}"><i class="icofont-cube"></i>{{ league.name }} </div></a>
+                <a href="{{ league|get_league_url:current_season }}">
+                  <div class="plays-link {% if current_league_id == league.id %} link-active {% endif %}"><i class="icofont-cube"></i>{{ league.name }} 
+                  </div>
+                </a>
             {% else %}
-            <div class="" id="heading{{ league.id }}" style="cursor: pointer;">
-                <span style="color: #fff;" class="" data-toggle="collapse" data-target="#collapse{{league.id}}" aria-expanded="true" aria-controls="collapse{{league.id}}">
-                    <i class="icofont-circled-down"></i>{{ league.name }}
-                </span>
-            </div>
-            <div id="collapse{{ league.id }}" class="collapse {% if current_league_id in league.get_childs_ids %} show{% else %} {% endif %}" aria-labelledby="heading{{league.id}}" data-parent="#accordion1">
-                {% for child in league.childs.all %}
-                    {% if child|has_season_data:current_season %}
-                    <a href="{{ child|get_league_url:current_season }}"><div class="plays-sub-link {% if current_league_id == child.id %} link-active {% endif %}" ><i class="icofont-cube"></i> {{ child.name }}</div></a>
-                    {% endif %}
-                {% endfor %}
-            </div>
+              <div class="" id="heading{{ league.id }}" style="cursor: pointer;">
+                  <span style="color: #fff;" class="" data-toggle="collapse" data-target="#collapse{{league.id}}" aria-expanded="true" aria-controls="collapse{{league.id}}">
+                      <i class="icofont-circled-down"></i>{{ league.name }}
+                  </span>
+              </div>
+              <div id="collapse{{ league.id }}" class="collapse {% if current_league_id in league.get_childs_ids %} show{% else %} {% endif %}" aria-labelledby="heading{{league.id}}" data-parent="#accordion1">
+                  {% for child in league.childs.all %}
+                      {% if child|has_season_data:current_season %}
+                      <a href="{{ child|get_league_url:current_season }}"><div class="plays-sub-link {% if current_league_id == child.id %} link-active {% endif %}" ><i class="icofont-cube"></i> {{ child.name }}</div></a>
+                      {% endif %}
+                  {% endfor %}
+              </div>
             {% endif %}
         {% endfor %}
     </div> </span>
